Fixed some alignments

--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -145,10 +145,7 @@
     line-height: 25px !important;
   }
 
-  .small-level-askpert{
-    text-align: center;
-    margin-right: 30px;
-  }
+  
 
   .arch-content-img{
     width: 80px !important;
@@ -156,7 +153,7 @@
 
   .phone-text {
     position: relative;
-    left: 70px !important;
+    left: 65px !important;
   }
 
   .location-mobile-view{
@@ -172,10 +169,18 @@
 }
 
 @media (max-width:428px) {
+  .small-level-askpert{
+    text-align: center;
+    margin-right: 30px;
+  }
+
+  .arch-container{
+    margin-bottom: 20px !important;
+  }
   .texts-section {
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 14px !important;
+    font-size: 14px !important; 
     line-height: 25px;
   }
 
@@ -408,7 +413,6 @@
     margin-left: 25%;
   } */
 
-
   .contact-text{
     position: relative;
     top: 3px;
@@ -421,12 +425,14 @@
     display: none;
   } */
   .first-paragraph {
-    margin-right: 20px;
+    /* margin-right: 20px; */
+    text-align: center;
   }
 
-  .second-para {
-    margin-right: 40px;
-  }
+  
+  /* .second-para {
+    margin-left: 100px !important;
+  } */
 
   .industry-cards{
     margin-left: 5px !important;
@@ -460,10 +466,14 @@
     line-height: 23px;
   }
 
-
-  .managment-box-text {
-    margin-top: 10px !important;
+  .second-br{
+    display: none;
   }
+
+  .box-container-space {
+  display: block;
+  height: 8px; /* or whatever space you need */
+}
 
   .website-box {
     margin-top: 50px;
@@ -610,6 +620,9 @@
   .hide-on-mobile{
     display: none;
   }
+  .first-paragraph{
+    line-height: 30px;
+  }
 }
 
 @media (max-width:769px) {
@@ -721,6 +734,7 @@
   .contact-text {
     margin-left: 0% !important;
     font-size: 13px !important;
+    font-weight: normal !important;
   }
 
   .footer-section2 {
